--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omoluka Construction Supply Landing Page</title>
     <link rel="stylesheet" href="stylesheet.css">
+    
 </head>
 <body>
     <header class="first_container">
         <div class="logo">
-            <h1>LOGO</h1>
+            <img src="OMOLUKA.png" alt="a brand name" width="150px"
+            height="80px">
         </div>
         <div class="after_logo">
            <a href="#">Home</a>
@@ -19,10 +21,27 @@
     </header>
     <section class="hero">
         <div class="hero_one">
-            <h1></h1>
+            <h1>Buidling Your Vision, One Material at a Time</h1>
         </div>
-        <div class="hero_two"></div>
-        <div class="hero_tree"></div>
+        <div class="hero_two">
+            <h4>Your trusted partner in high-quality construction materials, delivered with reliability, precision, and unparalled service.</h4>
+        </div>
+        <div class="hero_tree">
+            <button>Explore  Our Products</button>
+        </div>
+    </section>
+    <section class="our_mission">
+        <div class="mis_container">
+        <h1>Our mission</h1>
+        <h4>We're Vision Oriented and Our Goal is :</h4>
+        <p>To empower construction projects with high-quality, reliable, and sustainable materials, ensuring excellence in every
+        build.</p>
+        <p>We are committed to fostering strong partnerships, delivering exceptional service, and driving innovation to support the
+        evolving needs of the construction industry.</p>
+        </div>
+        <div class="mis_image">
+            <img src="AdobeStock_958174871_Preview.jpeg" alt="construction materiial imges" >
+        </div>
     </section>
 </body>
 </html>
